# django-md-editor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  docs.yml
docs/: changelog.md  development.md  index.md
docs/customization/: renderer.md  themes.md  toolbar.md  upload-handler.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: admin.md  cleanup.md  configuration.md  templates.md  widget.md
docs/reference/: api.md  commands.md  settings.md
example/: example.md  manage.py
example/example_project/: settings.py  urls.py
example/posts/: admin.py  forms.py  urls.py  views.py
example/posts/migrations/: 0001_initial.py
example/posts/templates/posts/: create.html  detail.html  list.html
src/django_markdown_widget/: __init__.py  admin.py  apps.py  cleanup.py  mixins.py  renderers.py  settings.py  uploads.py  urls.py  views.py  widgets.py
src/django_markdown_widget/management/commands/: cleanup_markdown_media.py
src/django_markdown_widget/static/django_markdown_widget/css/: editor.css
src/django_markdown_widget/static/django_markdown_widget/js/: editor.js
src/django_markdown_widget/templates/django_markdown_widget/: widget.html
src/django_markdown_widget/templatetags/: markdown_widget.py
src/django_md_editor/: __init__.py  admin.py  apps.py  cleanup.py  mixins.py  renderers.py  settings.py  uploads.py  urls.py  views.py  widgets.py
src/django_md_editor/management/commands/: cleanup_markdown_media.py
src/django_md_editor/static/django_md_editor/css/: editor.css
src/django_md_editor/static/django_md_editor/js/: editor.js
src/django_md_editor/templates/django_md_editor/: widget.html
src/django_md_editor/templatetags/: md_editor.py
tests/: conftest.py  django_settings.py  test_admin.py  test_cleanup.py  test_management.py  test_mixins.py  test_renderers.py  test_settings.py  test_templatetags.py  test_uploads.py  test_views.py  test_widgets.py  urls.py
