[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-markdown-widget"
version = "2.0.0"
description = "A GitHub-style markdown editor widget for Django forms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jakhongir Ganiev", email = "contact@jakhongir.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["django", "markdown", "editor", "widget", "github"]

dependencies = [
    "django>=5.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "ruff>=0.9.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_markdown_widget"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["django_markdown_widget"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
pythonpath = ["."]
addopts = "--cov=django_markdown_widget --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["django_markdown_widget"]

[tool.coverage.report]
show_missing = true
fail_under = 85
